@@ -5,6 +5,7 @@ v2.7.1   - With NSIS exe installer, made Windows' icons show the version
 	   when available.
 	 - Color picker now shows colors with the LUT applied.  This 
 	   makes the gui (zoom) respond a tad slower when the LUT is on.
+	 - Made DEB/RPM installer on Linux place an icon in desktop.
 
 v2.7.0   - Added ACEScsc files as IDTs to support DigitalLAD sample picture.
 	 - Made xml and ctl files never show as sequences of frames in
